; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_card.c_CARD_SetAttributesAsync.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_card.c_CARD_SetAttributesAsync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.card_direntry = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CARD_SetAttributesAsync(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.card_direntry, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @__card_getstatusex(i32 %11, i32 %12, %struct.card_direntry* %10)
  store i32 %13, i32* %9, align 4
  %14 = icmp sge i32 %13, 0
  br i1 %14, label %15, label %22

15:                                               ; preds = %4
  %16 = load i32, i32* %7, align 4
  %17 = getelementptr inbounds %struct.card_direntry, %struct.card_direntry* %10, i32 0, i32 0
  store i32 %16, i32* %17, align 4
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* %6, align 4
  %20 = load i32, i32* %8, align 4
  %21 = call i32 @__card_setstatusexasync(i32 %18, i32 %19, %struct.card_direntry* %10, i32 %20)
  store i32 %21, i32* %9, align 4
  br label %22

22:                                               ; preds = %15, %4
  %23 = load i32, i32* %9, align 4
  ret i32 %23
}

declare dso_local i32 @__card_getstatusex(i32, i32, %struct.card_direntry*) #1

declare dso_local i32 @__card_setstatusexasync(i32, i32, %struct.card_direntry*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
